# Gigaotvet

./: .gitignore  README.md  docker-compose.yml
backend/: .env.docker  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20240520_stage2.py  20240527_rag.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: admins.py  ai_instructions.py  auth.py  dialogs.py  knowledge.py  messages.py  router.py  ws.py
backend/app/bot/: handlers.py  router.py  utils.py
backend/app/core/: config.py  db.py  ws_manager.py
backend/app/middleware/: admin_context.py
backend/app/models/: __init__.py  admin.py  ai_instruction.py  audit.py  auth.py  dialog.py  knowledge_chunk.py  knowledge_file.py  message.py
backend/app/schemas/: admin.py  ai_instructions.py  auth.py  dialog.py  knowledge_file.py  message.py
backend/app/services/: ai_responder.py  audit.py  chunking.py  embedding_service.py  gigachat.py  knowledge_base.py  rag_service.py  security.py  text_extractor.py  ws_payloads.py
backend/tests/: conftest.py  test_auth_flow.py  test_chunking.py  test_dialogs_flow.py  test_knowledge_endpoints.py  test_rag_service.py  test_text_extractor.py  test_ws_events.py
deploy/: nginx.conf
deploy/systemd/: giga_backend.service  giga_bot.service  giga_frontend.service
frontend/: .env.docker  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx  (+1 more)
infra/: docker-compose.yml
(+25 files in other folders)
