[project]
name = "gigaotvet-backend"
version = "0.1.0"
description = "Backend для ИИ-автоответчика и веб-панели"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "SQLAlchemy>=2.0",
    "psycopg2-binary",
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "httpx",
]

[tool.setuptools]
package-dir = {"" = "app"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
